...
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/new_event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="description"
                android:hint="@string/description"
                android:importantForAutofill="yes"
                android:inputType="textMultiLine"
...
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/event_field_description"
                app:layout_constraintTop_toBottomOf="@+id/event_field_description" />

            <EditText
                android:id="@+id/new_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="date"
                android:focusableInTouchMode="false"
                android:hint="@string/date_format"
                android:importantForAutofill="yes"
...
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/event_field_date"
                app:layout_constraintTop_toBottomOf="@+id/event_field_date" />

            <EditText
                android:id="@+id/new_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="time"
                android:focusableInTouchMode="false"
                android:hint="@string/time_format"
                android:importantForAutofill="yes"
...
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text="@android:string/cancel"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/create_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_event_time" />

            <Button
...
                app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_button" />

            <EditText
                android:id="@+id/new_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/name"
                android:importantForAutofill="yes"
                android:inputType="text"
...
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/event_field_name"
                app:layout_constraintTop_toBottomOf="@+id/event_field_name" />

            <EditText
                android:id="@+id/new_event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="postalAddress"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="10dp"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/event_description"
                android:textAlignment="textStart"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="@+id/new_event_name"
                app:layout_constraintTop_toBottomOf="@+id/new_event_name" />

            <TextView
...
