...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <Button
                android:id="@+id/close_display_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:drawableStart="@drawable/baseline_add_24"
                android:onClick="returnToMainActivity"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_of_event"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_title" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="40dp"
                android:hint="@string/date_format"
                android:padding="7dp"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_location" />

            <TextView
                android:id="@+id/event_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_description" />

            <TextView
                android:id="@+id/event_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="40dp"
                android:hint="@string/time_format"
                android:padding="5dp"
...
