...
        android:layout_height="wrap_content"
        android:background="@color/off_white">

        <include layout="@layout/events_or_services_list_item_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:foregroundGravity="center"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/delete_event"
            android:clickable="true"
...
